--- a/index/style.css
+++ b/index/style.css
@@ -303,6 +303,13 @@ body {
     gap: 20px;
 }
 
+#allGridContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    overflow-x: hidden;
+}
+
 .search-results-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
